add_executable(printid printid.cu)
add_executable(warp_divergence warp_divergence.cu)
add_executable(deviceinfo deviceinfo.cu)
add_executable(latency_hiding latency_hiding.cu)
add_executable(matrixadd2d matrixadd2d.cu)
add_executable(reduced_vectoradd reduced_vectoradd.cu)
target_compile_options(latency_hiding PUBLIC -rdc=true)
target_compile_options(matrixadd2d PUBLIC -rdc=true)
target_compile_options(reduced_vectoradd PUBLIC -rdc=true)
target_link_libraries(latency_hiding csv)
target_link_libraries(matrixadd2d csv)
set_target_properties(latency_hiding matrixadd2d reduced_vectoradd PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
